--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>introcs</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 </project>
