--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,10 @@
             <artifactId>opencsv</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 </project>
