--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.openComplex.app.mainWindow</groupId>
   <artifactId>swingapp</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
-  <name>Maven Quick Start Archetype</name>
+  <name>openCOSY</name>
   <url>http://maven.apache.org</url>
+
+    <properties>
+        <github.global.server>github</github.global.server>
+    </properties>
+
+    <scm>
+        <url>https://github.com/pugachevskiy/oComplex</url>
+        <connection>scm:git:git://github.com/pugachevskiy/oComplex.git</connection>
+        <developerConnection>scm:git:git@github.com:pugachevskiy/oComplex.git</developerConnection>
+    </scm>
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -21,13 +37,49 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
                 <configuration>
                     <mainClass>com.openComplex.app.App</mainClass>
+                </configuration>
+            </plugin>
+
+            <plugin>
+
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>true</doCheck>
+                    <doUpdate>true</doUpdate>
+                    <revisionOnScmFailure>true</revisionOnScmFailure>
+                    <format>${project.version}.{0,number}</format>
+                    <items>
+                        <item>buildNumber0</item>
+                    </items>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-scm-plugin</artifactId>
+                <version>1.9</version>
+                <configuration>
+                    <connectionType>developerConnection</connectionType>
+                    <tag>${project.artifactId}-${project.version}</tag>
+                    <message>${project.artifactId}-${project.version}</message>
                 </configuration>
             </plugin>
         </plugins>
 
     </build>
+
     <dependencies>
         <dependency>
             <groupId>org.jogamp.gluegen</groupId>
@@ -38,11 +90,6 @@
             <groupId>org.jogamp.jogl</groupId>
             <artifactId>jogl-all-main</artifactId>
             <version>2.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.princeton-java-introduction</groupId>
-            <artifactId>introcs</artifactId>
-            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.opencsv</groupId>
@@ -58,6 +105,11 @@
             <groupId>com.github.yannrichet</groupId>
             <artifactId>JMathPlot</artifactId>
             <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 </project>
