--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <scm>
         <url>https://github.com/pugachevskiy/oComplex</url>
         <connection>scm:git:git://github.com/pugachevskiy/oComplex.git</connection>
-        <developerConnection>scm:git:git@github.com:pugachevskiy/oComplex.git</developerConnection>
+        <developerConnection>scm:git:https://pugachevskiy@github.com/pugachevskiy/oComplex.git</developerConnection>
     </scm>
 
     <build>
