--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <configuration>
                     <connectionType>developerConnection</connectionType>
                     <tag>${project.artifactId}-${project.version}</tag>
-                    <message>${project.artifactId}-${project.version}</message>
+                    <message>${project.artifactId}-${project.version}-${buildNumber}</message>
                 </configuration>
             </plugin>
         </plugins>
