--- a/buildNumber.properties
+++ b/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Thu Oct 22 23:13:52 CEST 2015
-buildNumber0=34
+#Wed Oct 28 15:16:41 CET 2015
+buildNumber0=35
